# K-Drama-Compass-Data-Driven-Recommender-System-for-Korean-Dramas

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/: BRANCHING_STRATEGY.md
.github/workflows/: ci.yml
configs/: config.yaml
notebooks/: KDrama.ipynb
scripts/: run_eda.py  run_features.py  run_mlflow.py  run_pipeline.py  run_recommender.py  run_sentiment.py  setup_dvc.sh
src/api/: __init__.py  auth.py  schemas.py
src/data/: etl.py  ingest.py  validate.py
src/features/: eda.py  feature_engineering.py
src/models/: evaluate.py  mlflow_tracker.py  registry.py
src/models/recommender/: collaborative.py  content_based.py  hybrid.py
src/models/sentiment/: bert_model.py  preprocessor.py  textblob_model.py
src/utils/: config.py  logger.py
